--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/fagis.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MB Jobs</title>
+    <title>Virtual Konektion</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600&display=swap"
       rel="stylesheet"
